--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,8 @@ language: android
 dist: trusty
 android:
   components:
-    - build-tools-25.0.2
-    - android-25
+    - build-tools-29.0.2
+    - android-29
+  licenses:
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
